Fixed the white strip bug on the homepage
The full bleed image being too wide was the cause of the issue. I converted the entire image as a background image using XD and scaled it with the screen size and breakpoints.

--- a/src/styles/__backgrounds.scss
+++ b/src/styles/__backgrounds.scss
@@ -45,6 +45,22 @@ footer {
   }
 }
 
+.full-bleed {
+  .full-bleed-content-wrapper {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+.full-bleed-image-row {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+  .full-bleed-img {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
 .button {
   background-color: $primary;
 }
