--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -269,6 +269,43 @@ $homepage-h1-font-size: $font-size-base * 5.0625;
   }
 }
 
+.full-bleed-image-row {
+  height: 650px;
+  @include media("<=laptop") {
+    height: 400px;
+  }
+  @include media("<tablet") {
+    height: 350px;
+  }
+  @include media("<=600px") {
+    height: 250px;
+  }
+  @include media("<=phone") {
+    height: 350px;
+  }
+  @include media("<=320px") {
+    height: 300px;
+  }
+}
+.full-bleed-img {
+  background: url("../img/homepage-marketing-dashboard-desktop.png") no-repeat
+    50% 50%;
+  background-size: cover;
+  height: 100%;
+  @include media("<=tablet") {
+    background: url("../img/homepage-marketing-dashboard-tablet.png") no-repeat
+      50% 50%;
+    background-size: cover;
+    height: 100%;
+  }
+  @include media("<=phone") {
+    background: url("../img/homepage-marketing-dashboard-mobile.png") no-repeat
+      50% 50%;
+    background-size: cover;
+    height: 100%;
+  }
+}
+
 /* TODO START- Homepage border in the hero - need to fix this */
 // .homepage .hero .accent-block {
 //   position: relative;
